--- a/stylesheets/blog.scss
+++ b/stylesheets/blog.scss
@@ -149,6 +149,7 @@ section.row.no-padding.culture.blog-posts {
     display: table-cell;
     overflow: hidden;
 }
+
 @media all and (min-width:746px) and (max-width:860px) {
     .pageDivide.col-md-12 {
         border-bottom: 1px solid #ccc;
@@ -156,11 +157,20 @@ section.row.no-padding.culture.blog-posts {
         margin-top: 117px !important;
     }
 }
-@media (max-width:881px) {
+@media all and (min-width:768px) and (max-width:880px) {
+    .pageDivide.col-md-12 {
+        border-bottom: 1px solid #ccc;
+        margin-bottom: 110px !important;
+        margin-top: 117px !important;
+        margin-left: -30px;
+    }
+}
+@media (min-width:880px) and (max-width:881px) {
     .pageDivide.col-md-12 {
         border-bottom: 1px solid #ccc;
         margin-bottom: 110px !important;
         margin-top: 120px !important;
+        margin-left: 30px;
     }
 }
 @media (min-device-width: 412px) and (max-device-width: 460px) and (-webkit-min-device-pixel-ratio: 2) {
@@ -348,6 +358,7 @@ a.read-moreUrl.full-article-link {
         border-bottom: 1px solid #ccc;
         margin-bottom: 80px !important;
         margin-top: 180px !important;
+        margin-left: 0px;
     }
 }
 @media all and (max-width:768px) {
@@ -384,6 +395,8 @@ a.read-moreUrl.full-article-link {
         border-bottom: 1px solid #ccc;
         margin-bottom: 80px !important;
         margin-top: 184px !important;
+        margin-left: -30px;
+        width: 109% !important;
     }
 
     p.blog-preview {
